# zu-lm

./: .env  .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  agent_animation.py  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
browser-agent/: README.md  package.json  tsconfig.json
browser-agent/src/: index.ts  server.ts
researcher/: .env  .env.example  .gitignore  Cargo.toml
researcher/browser-agent/: package-lock.json  package.json
researcher/src/: configuration.rs  graph.rs  lib.rs  main.rs  server.rs
researcher/src/assistant/: configuration.rs  debate.rs  graph.rs  groq.rs  mod.rs  prompts.rs  stagehand.rs  state.rs  utils.py  utils.rs
src/: demo.js  index.js  index.ts  lib.rs  luma.js  main.rs  schemas.js  stream.js  text.js  voice.js
zu-chat/: .env.example  .gitignore  README.md  log.txt  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
zu-chat/src/app/: globals.css  page.tsx
zu-chat/src/app/api/enrich/: route.ts
zu-chat/src/app/api/generate/: route.ts
zu-chat/src/app/api/research/: route.ts
zu-chat/src/app/research/: App.css  page.tsx
zu-chat/src/app/test/: page.tsx
zu-chat/src/components/: Chat.tsx  ResearchFlow.tsx  ResearchInputNode.tsx
zu-chat/src/components/podcast/: EnrichmentPopup.tsx  PodcastControls.tsx  PodcastNavigation.tsx  PodcastPlayer.tsx  PodcastSegment.tsx  PodcastTest.tsx
zu-chat/src/components/research/: ResearchHeader.tsx  ResearchPerspectives.tsx
zu-chat/src/components/ui/: switch.tsx
zu-chat/src/lib/: constants.ts  luma.ts  schemas.ts  text.ts  voice.ts
(+3 files in other folders)
