[package]
name = "ollama-deep-researcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
url = "2.5"
enum-as-inner = "0.6"
langchain = "0.2.2" 
ollama-rs = "0.1"  # For Ollama integration 